// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageApplicationCreateGeneralFeature should submit a form with a git repository 1`] = `
<body>
  <div />
  <div>
    <div
      class="absolute h-full bg-white w-full pointer-events-none"
      style="left: -30%;"
    />
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="bg-white pt-14 w-full lg:w-[70%]"
      >
        <div
          class="px-12 mx-auto relative pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <form>
            <section
              class="flex flex-col"
            >
              <h1
                class="text-neutral-400 text-3xl font-bold mb-2"
              >
                General Data
              </h1>
              <p
                class="text-sm text-neutral-350"
              >
                General settings allow you to set up the service name, the source and deployment parameters.
              </p>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral-400 text-2xl font-bold mt-10 mb-3"
                >
                  General
                </h2>
                <div
                  class="mb-3"
                  data-testid="input-text-wrapper"
                >
                  <div
                    class="relative"
                  >
                    <div
                      aria-label="input-container"
                      class="input    input--label-up "
                    >
                      <div
                        class=""
                      >
                        <label
                          class="text-sm translate-y-2"
                          for="Helm chart name"
                        >
                          Helm chart name
                        </label>
                        <input
                          class="input__value "
                          data-testid="input-text"
                          id="Helm chart name"
                          name="name"
                          type="text"
                          value="my-helm-app"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="input-textarea"
                >
                  <div
                    aria-label="textarea-container"
                    class="input pb-0 pr-2    "
                  >
                    <label
                      class="text-sm translate-y-2"
                      for="Description (optional)"
                    >
                      Description (optional)
                    </label>
                    <textarea
                      class="w-full min-h-[52px] mt-5 pr-3 bg-transparent appearance-none text-sm text-neutral-400 outline-0"
                      id="Description (optional)"
                      name="description"
                    />
                  </div>
                </div>
              </section>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral-400 text-2xl font-bold mt-10 mb-2"
                >
                  Source
                </h2>
                <p
                  class="text-sm text-neutral-350 mb-3"
                >
                  Deploy your helm chart from a Git repository or from a Helm repository.
                </p>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select    "
                      data-testid="select"
                    >
                      <label
                        class="!text-xs !translate-y-0"
                        for="Helm source"
                      >
                        Helm source
                      </label>
                      <div
                        class=" css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-4-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control css-13cymwt-control"
                        >
                          <div
                            class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <span
                              class="text-sm text-neutral-400 mr-1"
                            >
                              Git provider
                            </span>
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-mohuvp-dummyInput-DummyInput"
                              id="Helm source"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="Helm source"
                          type="hidden"
                          value="GIT"
                        />
                      </div>
                      <input
                        name="Helm source"
                        type="hidden"
                        value="GIT"
                      />
                      <div
                        class="absolute top-1/2 -translate-y-1/2 right-4 pointer-events-none"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-3 mt-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select    "
                      data-testid="select"
                    >
                      <label
                        class="text-sm translate-y-2 top-1.5"
                        for="Git repository"
                      >
                        Git repository
                      </label>
                      <div
                        class=" css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-5-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control css-13cymwt-control"
                        >
                          <div
                            class="input-select__value-container css-1fdsijx-ValueContainer"
                          >
                            <div
                              class="input-select__placeholder css-1jqq78o-placeholder"
                              id="react-select-5-placeholder"
                            >
                              Select...
                            </div>
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-5-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-mohuvp-dummyInput-DummyInput"
                              id="Git repository"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="Git repository"
                          type="hidden"
                          value=""
                        />
                      </div>
                      <input
                        name="Git repository"
                        type="hidden"
                        value=""
                      />
                      <div
                        class="absolute top-1/2 -translate-y-1/2 right-4 pointer-events-none"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-center"
                  >
                    <div
                      class="aspect-square border-2  rounded-full border-solid border-r-neutral-500 animate-spin w-4 "
                      data-testid="spinner"
                    />
                  </div>
                  <div
                    class="flex justify-center"
                  >
                    <div
                      class="aspect-square border-2  rounded-full border-solid border-r-neutral-500 animate-spin w-4 "
                      data-testid="spinner"
                    />
                  </div>
                </div>
              </section>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral-400 text-2xl font-bold mt-10 mb-2"
                >
                  Deployment
                </h2>
                <p
                  class="text-sm text-neutral-350 mb-3"
                >
                  Define the deployment configuration of your service.
                </p>
                <div
                  class="flex flex-col gap-3"
                >
                  <div>
                    <div
                      data-testid="input-textarea"
                    >
                      <div
                        aria-label="textarea-container"
                        class="input pb-0 pr-2    input--label-up"
                      >
                        <label
                          class="text-sm translate-y-2"
                          for="Helm arguments"
                        >
                          Helm arguments
                        </label>
                        <textarea
                          class="w-full min-h-[52px] mt-5 pr-3 bg-transparent appearance-none text-sm text-neutral-400 outline-0"
                          id="Helm arguments"
                          name="arguments"
                        >
                          --wait
                        </textarea>
                      </div>
                    </div>
                    <p
                      class="text-xs text-neutral-350 ml-4 mt-1"
                    >
                      Specify the helm arguments to be used during the helm install/upgrade. Expected format: ["-h", "0.0.0.0"]
                      <br />
                      <a
                        class="cursor-pointer transition duration-100 font-medium inline-flex flex-center gap-1 text-sky-500 hover:text-sky-600 text-xs mt-0.5"
                        href="https://helm.sh/docs/helm/helm_install/"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        See documentation
                        <span
                          class="icon-solid-arrow-up-right-from-square shrink-0 text-2xs leading-4"
                          role="img"
                        />
                      </a>
                    </p>
                  </div>
                  <div
                    class=""
                    data-testid="input-text-wrapper"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        aria-label="input-container"
                        class="input    input--label-up "
                      >
                        <div
                          class=""
                        >
                          <label
                            class="text-sm translate-y-2"
                            for="Helm timeout"
                          >
                            Helm timeout
                          </label>
                          <input
                            class="input__value "
                            data-testid="input-text"
                            id="Helm timeout"
                            name="timeout_sec"
                            type="text"
                            value="600"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex  items-start mt-2 "
                    data-testid="input-toggle"
                  >
                    <div
                      aria-label="toggle-btn"
                      class="inline-flex justify-between items-center cursor-pointer"
                      data-testid="input-toggle-button"
                    >
                      <input
                        class="hidden"
                        type="checkbox"
                        value="false"
                      />
                      <div
                        aria-label="bg"
                        class="w-8 h-4.5 flex items-center rounded-full p-0.5  bg-neutral-300"
                      >
                        <div
                          aria-label="circle"
                          class="w-3.5 h-3.5 bg-white rounded-full shadow-lg transform  "
                        />
                      </div>
                    </div>
                    <div
                      class="relative -top-1 ml-3 cursor-pointer"
                    >
                      <p
                        class="text-neutral-400 text-ssm font-medium"
                      >
                        Allow cluster-wide resources
                      </p>
                      <div
                        class="text-xs text-neutral-350"
                      >
                        Allow this chart to deploy resources outside of this environment namespace (including CRDs or non-namespaced resources).
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex  items-start mt-5 "
                  data-testid="input-toggle"
                >
                  <div
                    aria-label="toggle-btn"
                    class="inline-flex justify-between items-center cursor-pointer"
                    data-testid="input-toggle-button"
                  >
                    <input
                      class="hidden"
                      type="checkbox"
                      value="false"
                    />
                    <div
                      aria-label="bg"
                      class="w-8 h-4.5 flex items-center rounded-full p-0.5  bg-neutral-300"
                    >
                      <div
                        aria-label="circle"
                        class="w-3.5 h-3.5 bg-white rounded-full shadow-lg transform  "
                      />
                    </div>
                  </div>
                  <div
                    class="relative -top-1 ml-3 cursor-pointer"
                  >
                    <p
                      class="text-neutral-400 text-ssm font-medium"
                    >
                      Auto-deploy
                    </p>
                    <div
                      class="text-xs text-neutral-350"
                    >
                      The service will be automatically updated on every new commit on the branch.
                    </div>
                  </div>
                </div>
              </section>
            </section>
            <div
              class="flex justify-end gap-3 mt-6"
            >
              <button
                class="inline-flex items-center shrink-0 font-medium transition disabled:text-brand-300 disabled:bg-brand-100 disabled:border-none text-sm h-10 px-4 rounded"
                type="button"
              >
                Cancel
              </button>
              <button
                class="inline-flex items-center shrink-0 font-medium transition disabled:text-brand-300 disabled:bg-brand-100 disabled:border-none text-sm h-10 px-4 rounded bg-brand-500 hover:bg-brand-600 text-white"
                disabled=""
                type="submit"
              >
                Continue
              </button>
            </div>
          </form>
        </div>
      </section>
      <aside
        class="w-[30%] sticky top-0 pt-14 pl-10 hidden lg:block"
      >
        <div
          class="bg-neutral-50 p-8 border-neutral-200 border-b border-l rounded max-w-[22.5rem] "
          data-testid="funnel-body-help"
        >
          <div
            class=""
          >
            <svg
              class="shrink-0 w-7 h-7 mb-4"
              fill="none"
              height="28"
              name="INFORMATION"
              viewBox="0 0 28 28"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#B160F0"
                height="28"
                rx="3"
                width="28"
              />
              <path
                d="M11.813 19.191c0 .165.027.329.136.465l.465.711c.137.219.465.383.738.383h1.668c.274 0 .602-.164.739-.383l.464-.71c.082-.11.137-.329.137-.466l.027-1.066h-4.375v1.066zm2.16-12.414c-2.79 0-4.786 2.243-4.786 4.785 0 1.204.438 2.297 1.176 3.145.465.52 1.149 1.613 1.422 2.516v.027h4.402v-.027c.274-.903.957-1.996 1.422-2.516a4.673 4.673 0 001.203-3.145c0-2.652-2.187-4.812-4.84-4.785zM14 9.402c-1.23 0-2.188.957-2.188 2.16a.45.45 0 01-.437.438.432.432 0 01-.438-.438c0-1.667 1.368-3.035 3.063-3.035a.47.47 0 01.438.438.45.45 0 01-.438.437z"
                fill="#fff"
              />
            </svg>
            <h5
              class="text-lg font-medium neutral-400 mb-4"
            >
              Deploying a Helm Chart
            </h5>
            <ul
              class="list-disc pl-4 text-neutral-400 text-sm mb-8"
            >
              <li
                class="mb-3"
              >
                You can deploy a Helm chart from a Helm repository or from a git repository.
              </li>
              <li
                class="mb-3"
              >
                Helm repositories can be private or public. Repositories are managed at organization level by the admin.
              </li>
              <li
                class="mb-3"
              >
                Deploying the chart from your private git repository allows you to benefit from the auto-deploy feature and deploy it at every new commit.
              </li>
              <li
                class="mb-3"
              >
                By default resources are deployed on the namespace of the Qovery environment. You can deploy outside this namespace by enabling the flag “Allow cluster-wide resources”
              </li>
            </ul>
            <div
              class="py-8 border-t border-neutral-200 -mx-8 px-8 pb-0"
              data-testid="help-section"
            >
              <p
                class="text-neutral-400 text-sm mb-5"
              >
                Need help? You may find these links useful
              </p>
              <div
                class="flex flex-col gap-2"
              >
                <a
                  class="cursor-pointer transition duration-100 font-medium flex-center gap-1 text-sky-500 hover:text-sky-600 text-sm flex"
                  href="https://hub.qovery.com/docs/using-qovery/configuration/application/#general"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  How to configure my Helm chart
                  <span
                    class="icon-solid-arrow-up-right-from-square shrink-0 text-xs leading-5"
                    role="img"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</body>
`;

exports[`PageApplicationCreateGeneralFeature should submit a form with a helm repository and match snapshots 1`] = `
<body>
  <div />
  <div>
    <div
      class="absolute h-full bg-white w-full pointer-events-none"
      style="left: -30%;"
    />
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="bg-white pt-14 w-full lg:w-[70%]"
      >
        <div
          class="px-12 mx-auto relative pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <form>
            <section
              class="flex flex-col"
            >
              <h1
                class="text-neutral-400 text-3xl font-bold mb-2"
              >
                General Data
              </h1>
              <p
                class="text-sm text-neutral-350"
              >
                General settings allow you to set up the service name, the source and deployment parameters.
              </p>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral-400 text-2xl font-bold mt-10 mb-3"
                >
                  General
                </h2>
                <div
                  class="mb-3"
                  data-testid="input-text-wrapper"
                >
                  <div
                    class="relative"
                  >
                    <div
                      aria-label="input-container"
                      class="input    input--label-up "
                    >
                      <div
                        class=""
                      >
                        <label
                          class="text-sm translate-y-2"
                          for="Helm chart name"
                        >
                          Helm chart name
                        </label>
                        <input
                          class="input__value "
                          data-testid="input-text"
                          id="Helm chart name"
                          name="name"
                          type="text"
                          value="my-helm-app"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="input-textarea"
                >
                  <div
                    aria-label="textarea-container"
                    class="input pb-0 pr-2    input--label-up"
                  >
                    <label
                      class="text-sm translate-y-2"
                      for="Description (optional)"
                    >
                      Description (optional)
                    </label>
                    <textarea
                      class="w-full min-h-[52px] mt-5 pr-3 bg-transparent appearance-none text-sm text-neutral-400 outline-0"
                      id="Description (optional)"
                      name="description"
                    >
                      description
                    </textarea>
                  </div>
                </div>
              </section>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral-400 text-2xl font-bold mt-10 mb-2"
                >
                  Source
                </h2>
                <p
                  class="text-sm text-neutral-350 mb-3"
                >
                  Deploy your helm chart from a Git repository or from a Helm repository.
                </p>
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class=""
                  >
                    <div
                      class="input input--select    "
                      data-testid="select"
                    >
                      <label
                        class="!text-xs !translate-y-0"
                        for="Helm source"
                      >
                        Helm source
                      </label>
                      <div
                        class=" css-b62m3t-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-3-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="input-select__control css-13cymwt-control"
                        >
                          <div
                            class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                          >
                            <span
                              class="text-sm text-neutral-400 mr-1"
                            >
                              Helm repository
                            </span>
                            <input
                              aria-autocomplete="list"
                              aria-expanded="false"
                              aria-haspopup="true"
                              aria-readonly="true"
                              class="css-mohuvp-dummyInput-DummyInput"
                              id="Helm source"
                              inputmode="none"
                              role="combobox"
                              tabindex="0"
                              value=""
                            />
                          </div>
                          <div
                            class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                        <input
                          name="Helm source"
                          type="hidden"
                          value="HELM_REPOSITORY"
                        />
                      </div>
                      <input
                        name="Helm source"
                        type="hidden"
                        value="HELM_REPOSITORY"
                      />
                      <div
                        class="absolute top-1/2 -translate-y-1/2 right-4 pointer-events-none"
                      >
                        <span
                          class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                          role="img"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-col gap-3"
                  >
                    <div
                      class="flex justify-center"
                    >
                      <div
                        class="aspect-square border-2  rounded-full border-solid border-r-neutral-500 animate-spin w-4 "
                        data-testid="spinner"
                      />
                    </div>
                  </div>
                </div>
              </section>
              <section
                class="flex flex-col"
              >
                <h2
                  class="text-neutral-400 text-2xl font-bold mt-10 mb-2"
                >
                  Deployment
                </h2>
                <p
                  class="text-sm text-neutral-350 mb-3"
                >
                  Define the deployment configuration of your service.
                </p>
                <div
                  class="flex flex-col gap-3"
                >
                  <div>
                    <div
                      data-testid="input-textarea"
                    >
                      <div
                        aria-label="textarea-container"
                        class="input pb-0 pr-2    input--label-up"
                      >
                        <label
                          class="text-sm translate-y-2"
                          for="Helm arguments"
                        >
                          Helm arguments
                        </label>
                        <textarea
                          class="w-full min-h-[52px] mt-5 pr-3 bg-transparent appearance-none text-sm text-neutral-400 outline-0"
                          id="Helm arguments"
                          name="arguments"
                        >
                          --wait
                        </textarea>
                      </div>
                    </div>
                    <p
                      class="text-xs text-neutral-350 ml-4 mt-1"
                    >
                      Specify the helm arguments to be used during the helm install/upgrade. Expected format: ["-h", "0.0.0.0"]
                      <br />
                      <a
                        class="cursor-pointer transition duration-100 font-medium inline-flex flex-center gap-1 text-sky-500 hover:text-sky-600 text-xs mt-0.5"
                        href="https://helm.sh/docs/helm/helm_install/"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        See documentation
                        <span
                          class="icon-solid-arrow-up-right-from-square shrink-0 text-2xs leading-4"
                          role="img"
                        />
                      </a>
                    </p>
                  </div>
                  <div
                    class=""
                    data-testid="input-text-wrapper"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        aria-label="input-container"
                        class="input    input--label-up "
                      >
                        <div
                          class=""
                        >
                          <label
                            class="text-sm translate-y-2"
                            for="Helm timeout"
                          >
                            Helm timeout
                          </label>
                          <input
                            class="input__value "
                            data-testid="input-text"
                            id="Helm timeout"
                            name="timeout_sec"
                            type="text"
                            value="600"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex  items-start mt-2 "
                    data-testid="input-toggle"
                  >
                    <div
                      aria-label="toggle-btn"
                      class="inline-flex justify-between items-center cursor-pointer"
                      data-testid="input-toggle-button"
                    >
                      <input
                        checked=""
                        class="hidden"
                        type="checkbox"
                        value="true"
                      />
                      <div
                        aria-label="bg"
                        class="w-8 h-4.5 flex items-center rounded-full p-0.5  bg-brand-500"
                      >
                        <div
                          aria-label="circle"
                          class="w-3.5 h-3.5 bg-white rounded-full shadow-lg transform  translate-x-3.5"
                        />
                      </div>
                    </div>
                    <div
                      class="relative -top-1 ml-3 cursor-pointer"
                    >
                      <p
                        class="text-neutral-400 text-ssm font-medium"
                      >
                        Allow cluster-wide resources
                      </p>
                      <div
                        class="text-xs text-neutral-350"
                      >
                        Allow this chart to deploy resources outside of this environment namespace (including CRDs or non-namespaced resources).
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </section>
            <div
              class="flex justify-end gap-3 mt-6"
            >
              <button
                class="inline-flex items-center shrink-0 font-medium transition disabled:text-brand-300 disabled:bg-brand-100 disabled:border-none text-sm h-10 px-4 rounded"
                type="button"
              >
                Cancel
              </button>
              <button
                class="inline-flex items-center shrink-0 font-medium transition disabled:text-brand-300 disabled:bg-brand-100 disabled:border-none text-sm h-10 px-4 rounded bg-brand-500 hover:bg-brand-600 text-white"
                disabled=""
                type="submit"
              >
                Continue
              </button>
            </div>
          </form>
        </div>
      </section>
      <aside
        class="w-[30%] sticky top-0 pt-14 pl-10 hidden lg:block"
      >
        <div
          class="bg-neutral-50 p-8 border-neutral-200 border-b border-l rounded max-w-[22.5rem] "
          data-testid="funnel-body-help"
        >
          <div
            class=""
          >
            <svg
              class="shrink-0 w-7 h-7 mb-4"
              fill="none"
              height="28"
              name="INFORMATION"
              viewBox="0 0 28 28"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#B160F0"
                height="28"
                rx="3"
                width="28"
              />
              <path
                d="M11.813 19.191c0 .165.027.329.136.465l.465.711c.137.219.465.383.738.383h1.668c.274 0 .602-.164.739-.383l.464-.71c.082-.11.137-.329.137-.466l.027-1.066h-4.375v1.066zm2.16-12.414c-2.79 0-4.786 2.243-4.786 4.785 0 1.204.438 2.297 1.176 3.145.465.52 1.149 1.613 1.422 2.516v.027h4.402v-.027c.274-.903.957-1.996 1.422-2.516a4.673 4.673 0 001.203-3.145c0-2.652-2.187-4.812-4.84-4.785zM14 9.402c-1.23 0-2.188.957-2.188 2.16a.45.45 0 01-.437.438.432.432 0 01-.438-.438c0-1.667 1.368-3.035 3.063-3.035a.47.47 0 01.438.438.45.45 0 01-.438.437z"
                fill="#fff"
              />
            </svg>
            <h5
              class="text-lg font-medium neutral-400 mb-4"
            >
              Deploying a Helm Chart
            </h5>
            <ul
              class="list-disc pl-4 text-neutral-400 text-sm mb-8"
            >
              <li
                class="mb-3"
              >
                You can deploy a Helm chart from a Helm repository or from a git repository.
              </li>
              <li
                class="mb-3"
              >
                Helm repositories can be private or public. Repositories are managed at organization level by the admin.
              </li>
              <li
                class="mb-3"
              >
                Deploying the chart from your private git repository allows you to benefit from the auto-deploy feature and deploy it at every new commit.
              </li>
              <li
                class="mb-3"
              >
                By default resources are deployed on the namespace of the Qovery environment. You can deploy outside this namespace by enabling the flag “Allow cluster-wide resources”
              </li>
            </ul>
            <div
              class="py-8 border-t border-neutral-200 -mx-8 px-8 pb-0"
              data-testid="help-section"
            >
              <p
                class="text-neutral-400 text-sm mb-5"
              >
                Need help? You may find these links useful
              </p>
              <div
                class="flex flex-col gap-2"
              >
                <a
                  class="cursor-pointer transition duration-100 font-medium flex-center gap-1 text-sky-500 hover:text-sky-600 text-sm flex"
                  href="https://hub.qovery.com/docs/using-qovery/configuration/application/#general"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  How to configure my Helm chart
                  <span
                    class="icon-solid-arrow-up-right-from-square shrink-0 text-xs leading-5"
                    role="img"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</body>
`;
